--- a/procommissions/views/menu_views.xml
+++ b/procommissions/views/menu_views.xml
@@ -6,17 +6,23 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <record model="ir.actions.act_window" id="action_report_individual">
+        <field name="name">Individual</field>
+        <field name="res_model">procom.individual.report</field>
+        <field name="view_mode">tree</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="action_report_compiled">
+        <field name="name">Compiled</field>
+        <field name="res_model">procom.compiled.report</field>
+        <field name="view_mode">tree</field>
+    </record>
+
     <menuitem name="ProCommissions" id="procom_root_menu" />
 
     <menuitem name="Commissions" id="procom_commissions_menu" parent="procom_root_menu" action="action_commissions" sequence="1"/>
-</odoo>
 
-<!-- <?xml version="1.0" encoding="UTF-8"?>
-<odoo>
-    <menuitem id="menu_pro_commissions_root" action="action_pro_commissions" />
-    <menuitem id="test_menu_root" name="Test">
-    <menuitem id="test_first_level_menu" name="First Level">
-        <menuitem id="test_model_menu_action" action="test_model_action"/>
-    </menuitem>
-</menuitem>
-</odoo> -->
+    <menuitem name="Reporting" id="procom_reporting_menu" parent="procom_root_menu" sequence="2"/>
+    <menuitem name="Individual" id="procom_individual_report_menu" parent="procom_reporting_menu" action="action_report_individual" sequence="1"/>
+    <menuitem name="Compiled" id="procom_compiled_report_menu" parent="procom_reporting_menu" action="action_report_compiled" sequence="2"/>
+</odoo>
