--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -135,4 +135,7 @@
     <!-- Menu item -->
     <menuitem name="ProCommissions" id="procom_root_menu" />
     <menuitem name="Commissions" id="procom_commissions_menu" parent="procom_root_menu" action="action_commissions" sequence="1"/>
+    <menuitem name="Reporting" id="procom_reporting_menu" parent="procom_root_menu" sequence="2"/>
+    <menuitem name="Individual" id="procom_individual_report_menu" parent="procom_reporting_menu" action="action_report_individual" sequence="1"/>
+    <menuitem name="Compiled" id="procom_compiled_report_menu" parent="procom_reporting_menu" action="action_report_compiled" sequence="2"/>
 </odoo>
