--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -1,14 +1,15 @@
 <odoo>
-    <record id="view_bank_statement_line_form_inherit" model="ir.ui.view">
-        <field name="name">account.bank.statement.line.form.inherit</field>
+    <record id="view_bank_statement_line_kanban_inherit" model="ir.ui.view">
+        <field name="name">account.bank.statement.line.kanban.inherit</field>
         <field name="model">account.bank.statement.line</field>
-        <field name="inherit_id" ref="account.view_account_bank_statement_line_form"/>
+        <field name="inherit_id" ref="account_accountant.view_bank_statement_line_kanban_bank_rec_widget"/>
         <field name="arch" type="xml">
-            <xpath expr="//form//header" position="inside">
-                <button name="action_transfer_expense" 
-                        string="Transfer Expense" 
-                        type="object" 
-                        class="btn-primary"/>
+            <xpath expr="//div[@t-attf-class='oe_kanban_card oe_kanban_global_click o_bank_rec_st_line_kanban_card']" position="inside">
+                <button type="object"
+                        name="action_transfer_expense"
+                        class="btn btn-primary btn-sm mt-2"
+                        t-if="!record.is_reconciled.raw_value"
+                        string="Transfer Expense" />
             </xpath>
         </field>
     </record>
