--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -5,11 +5,20 @@
         <field name="inherit_id" ref="account_accountant.view_bank_statement_line_kanban_bank_rec_widget"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@t-attf-class='oe_kanban_card oe_kanban_global_click o_bank_rec_st_line_kanban_card']" position="inside">
-                <button type="object"
-                        name="action_transfer_expense"
-                        class="btn btn-primary btn-sm mt-2"
-                        t-if="!record.is_reconciled.raw_value"
-                        string="Transfer Expense" />
+                <!-- Add a group below the notes field -->
+                <div class="o_kanban_group mt-3">
+                    <div class="o_kanban_group_title">
+                        <strong>Transfer Expense</strong>
+                    </div>
+                    <div class="o_kanban_group_content">
+                        <button type="object"
+                                name="action_transfer_expense"
+                                class="btn btn-primary btn-sm"
+                                string="Transfer to">
+                            Transfer to
+                        </button>
+                    </div>
+                </div>
             </xpath>
         </field>
     </record>
