--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -2,9 +2,9 @@
     <record id="view_bank_statement_line_kanban_inherit" model="ir.ui.view">
         <field name="name">account.bank.statement.line.kanban.inherit</field>
         <field name="model">account.bank.statement.line</field>
-        <field name="inherit_id" ref="account_accountant.view_bank_statement_line_tree_bank_rec_widget"/>
+        <field name="inherit_id" ref="account_accountant.view_bank_statement_line_form_bank_rec_widget"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='narration']" position="after">
+            <xpath expr="//field[@name='journal_id']" position="after">
                 <!-- Add a group below the notes field -->
                 <div class="o_kanban_group mt-3">
                     <div class="o_kanban_group_title">
