--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -1,24 +1,16 @@
 <odoo>
-    <record id="view_bank_statement_line_kanban_inherit" model="ir.ui.view">
-        <field name="name">account.bank.statement.line.kanban.inherit</field>
+    <record id="view_bank_statement_line_form_inherit" model="ir.ui.view">
+        <field name="name">account.bank.statement.line.form.inherit</field>
         <field name="model">account.bank.statement.line</field>
         <field name="inherit_id" ref="account_accountant.view_bank_statement_line_form_bank_rec_widget"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='journal_id']" position="after">
-                <!-- Add a group below the notes field -->
-                <div class="o_kanban_group mt-3">
-                    <div class="o_kanban_group_title">
-                        <strong>Transfer Expense</strong>
-                    </div>
-                    <div class="o_kanban_group_content">
-                        <button type="object"
-                                name="action_transfer_expense"
-                                class="btn btn-primary btn-sm"
-                                string="Transfer to">
-                            Transfer to
-                        </button>
-                    </div>
-                </div>
+            <xpath expr="//group" position="after">
+                <group string="Transfer Expense">
+                    <button type="object"
+                            name="action_transfer_expense"
+                            class="btn btn-primary btn-sm"
+                            string="Transfer to" />
+                </group>
             </xpath>
         </field>
     </record>
