--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -1,17 +1,18 @@
 <odoo>
-    <record id="view_bank_statement_line_form_inherit" model="ir.ui.view">
-        <field name="name">account.bank.statement.line.form.inherit</field>
+    <record id="view_bank_statement_line_kanban_inherit" model="ir.ui.view">
+        <field name="name">account.bank.statement.line.kanban.inherit</field>
         <field name="model">account.bank.statement.line</field>
-        <field name="inherit_id" ref="account_accountant.view_bank_statement_line_form_bank_rec_widget"/>
+        <field name="inherit_id" ref="account_accountant.view_bank_statement_line_kanban_bank_rec_widget"/>
         <field name="arch" type="xml">
-            <xpath expr="//group" position="after">
-                <group string="Transfer Expense">
-                    <button type="object"
-                            name="action_transfer_expense"
-                            class="btn btn-primary btn-sm"
-                            string="Transfer to" />
-                </group>
+            <xpath expr="//div[@class='o_field_many2many_tags o_field_widget d-flex flex-row flex-nowrap']" position="after">
+                <button type="object"
+                        name="action_transfer_expense"
+                        class="btn btn-primary btn-sm mt-1"
+                        string="Transfer to">
+                    Transfer to
+                </button>
             </xpath>
         </field>
     </record>
 </odoo>
+
