--- a/proquotes/static/src/CSS/quoteHeaderText.css
+++ b/proquotes/static/src/CSS/quoteHeaderText.css
@@ -46,19 +46,19 @@
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    background-color: #ffcccc; /* Light red background */
-    color: black; /* Black text */
+    background-color: red; /* Light red background */
+    color: white; /* Black text */
     z-index: 1050; /* Ensure it floats above content */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #d9534f; /* Slightly darker red border */
+    border: 1px solid black; /* Slightly darker red border */
     padding: 15px;
     border-radius: 8px;
 }
 
 #language-notification .btn-primary {
-    background-color: #d9d9d9; /* Dark grey button */
+    background-color: red; /* Dark grey button */
     color: #333333; /* Darker grey text for the button */
-    border: none;
+    border: 1px solid #333;
 }
 
 #language-notification .btn-primary:hover {
@@ -66,7 +66,7 @@
 }
 
 #language-notification .btn-close {
-    color: black; /* Black close button */
+    color: red; /* Black close button */
     opacity: 0.7;
 }
 
