--- a/proquotes/static/src/CSS/quoteHeaderText.css
+++ b/proquotes/static/src/CSS/quoteHeaderText.css
@@ -45,7 +45,7 @@
     top: 20px;
     right: 20px;
     width: 30%;
-    background-color: red;
+    background-color: #24272A;
     color: black;
     z-index: 1050;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -57,7 +57,9 @@
 }
 
 #language-notification h4 {
-    font-size: 1rem;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
