--- a/proportal/views/web_base.xml
+++ b/proportal/views/web_base.xml
@@ -4,7 +4,7 @@
 		<xpath expr="//head//script[1]" position="before">
 			<!-- Google Tag Manager -->
 			<!-- <script src="proportal/static/JS/analytics.js" /> -->
-			<script>
+			<!-- <script>
 				(function (w, d, s, l, i) {
 				w[l] = w[l] || []; w[l].push({
 				'gtm.start':
@@ -13,24 +13,24 @@
 				j = d.createElement(s), dl = l != 'dataLayer' ? '&amp;l=' + l : ''; j.async = true; j.src =
 				'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
 				})(window, document, 'script', 'dataLayer', 'GTM-P29CMWQ');
-			</script>
+			</script> -->
 			<!-- End Google Tag Manager -->
 		</xpath>
 		<xpath expr="//body/t" position="before">
 			<!-- Google Tag Manager (noscript) -->
-			<noscript>
+			<!-- <noscript>
 				<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P29CMWQ"
 					height="0" width="0" style="display:none;visibility:hidden"></iframe>
-			</noscript>
+			</noscript> -->
 			<!-- End Google Tag Manager (noscript) -->
 		</xpath>
 		<xpath expr="//body/t" position="after">
-			<script type="text/javascript">
+			<!-- <script type="text/javascript">
 				_linkedin_partner_id = "4428316";
 				window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
 				window._linkedin_data_partner_ids.push(_linkedin_partner_id);
-			</script>
-			<script type="text/javascript">
+			</script> -->
+			<!-- <script type="text/javascript">
 				(function(l) {
 				if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
 				window.lintrk.q=[]}
@@ -39,7 +39,7 @@
 				b.type = "text/javascript";b.async = true;
 				b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
 				s.parentNode.insertBefore(b, s);})(window.lintrk);
-			</script>
+			</script> -->
 			<script type="text/javascript">
 				function changeStyle() {
 				var tabs = document.getElementsByClassName("var_radio_label");
@@ -53,9 +53,9 @@
 				}
 				}
 			</script>
-			<noscript>
+			<!-- <noscript>
 				<img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=4428316&amp;fmt=gif" />
-			</noscript>
+			</noscript> -->
 		</xpath>
 	</template>
 </odoo>
