--- a/proportal/views/navbarCustom.xml
+++ b/proportal/views/navbarCustom.xml
@@ -4,7 +4,7 @@
             <nav id="custom-navbar">
                 <div class="logo">
                     <a href="/">
-                        <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo">
+                        <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo"></img>
                     </a>
                 </div>
                 <ul class="menu-links">
