Remove old styling code

--- a/proportal/static/src/CSS/header.css
+++ b/proportal/static/src/CSS/header.css
@@ -1,4 +1,4 @@
-#custom-navbar {
+/* #custom-navbar {
     background-color: rgba(0, 0, 0, 0.75);
     color: #fff;
     display: flex;
@@ -72,4 +72,4 @@
 
 #custom-navbar .menu-links li:hover .dropdown-content {
     display: block;
-}
+} */
