Fix tag mismatch

--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -3,7 +3,7 @@
         <nav id="custom-navbar">
             <div class="logo">
                 <a href="/">
-                    <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo">
+                    <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo" />
                 </a>
             </div>
 
