--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -6,7 +6,7 @@
                 <!-- logo -->
                 <div class="logo">
                     <a href="/">
-                        <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo"></img>
+                        <img src="https://cdn.r-e-a-l.it/videos/header_en.png" alt="Logo"></img>
                     </a>
                 </div>
 
