--- a/prosite/static/src/css/header.css
+++ b/prosite/static/src/css/header.css
@@ -23,10 +23,18 @@
     margin: 0 auto;
 }
 
-/* Left: Logo */
+#custom-navbar .logo {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
 #custom-navbar .logo img {
     max-height: 40px;
+    width: auto;
+    vertical-align: middle;
 }
+
 
 /* Center: Menu Links */
 #custom-navbar .menu-links {
