--- a/prosite/static/src/css/header.css
+++ b/prosite/static/src/css/header.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     width: 15%; /* Fixed 15% width */
-    padding: 0 10px; /* Internal padding for spacing */
+    padding: 10px 10px; /* Internal padding for spacing */
 }
 
 #custom-navbar .logo-group img {
