--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -27,19 +27,19 @@
         <!-- Submenus -->
         <div class="submenus">
             <div id="submenu-1" class="submenu">
-                <div class="submenu-column">Test 1.1<br>Test 1.2<br>Test 1.3</div>
-                <div class="submenu-column">Test 1.4<br>Test 1.5<br>Test 1.6</div>
-                <div class="submenu-column">Test 1.7<br>Test 1.8<br>Test 1.9</div>
+                <div class="submenu-column">Test 1.1<br />Test 1.2<br />Test 1.3</div>
+                <div class="submenu-column">Test 1.4<br />Test 1.5<br />Test 1.6</div>
+                <div class="submenu-column">Test 1.7<br />Test 1.8<br />Test 1.9</div>
             </div>
             <div id="submenu-2" class="submenu">
-                <div class="submenu-column">Test 2.1<br>Test 2.2<br>Test 2.3</div>
-                <div class="submenu-column">Test 2.4<br>Test 2.5<br>Test 2.6</div>
-                <div class="submenu-column">Test 2.7<br>Test 2.8<br>Test 2.9</div>
+                <div class="submenu-column">Test 2.1<br />Test 2.2<br />Test 2.3</div>
+                <div class="submenu-column">Test 2.4<br />Test 2.5<br />Test 2.6</div>
+                <div class="submenu-column">Test 2.7<br />Test 2.8<br />Test 2.9</div>
             </div>
             <div id="submenu-3" class="submenu">
-                <div class="submenu-column">Test 3.1<br>Test 3.2<br>Test 3.3</div>
-                <div class="submenu-column">Test 3.4<br>Test 3.5<br>Test 3.6</div>
-                <div class="submenu-column">Test 3.7<br>Test 3.8<br>Test 3.9</div>
+                <div class="submenu-column">Test 3.1<br />Test 3.2<br />Test 3.3</div>
+                <div class="submenu-column">Test 3.4<br />Test 3.5<br />Test 3.6</div>
+                <div class="submenu-column">Test 3.7<br />Test 3.8<br />Test 3.9</div>
             </div>
             <!-- Add more submenus as needed -->
         </div>
