--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -3,7 +3,7 @@
         <nav id="custom-navbar">
             <div class="logo-group">
                 <a href="/">
-                    <img src="https://cdn.r-e-a-l.it/images/icons/product-cycle.gif" alt="Logo"></img>
+                    <img src="https://cdn.r-e-a-l.it/videos/header-en.png" alt="Logo"></img>
                 </a>
             </div>
 
