--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -28,24 +28,43 @@
         <div class="submenus">
             <div id="submenu-1" class="submenu">
                 <div class="submenu-column">
-                    <div class="column-title">Title</div>
+                    <div class="column-title">Title 1</div>
                     <div>Test 1.1</div>
                     <div>Test 1.2</div>
                     <div>Test 1.3</div>
                 </div>
                 <div class="submenu-column">
-                    <div class="column-title">Title</div>
-                    <div>Test 1.4</div>
-                    <div>Test 1.5</div>
-                    <div>Test 1.6</div>
+                    <div class="column-title">Title 2</div>
+                    <div>Test 2.1</div>
+                    <div>Test 2.2</div>
+                    <div>Test 2.3</div>
                 </div>
                 <div class="submenu-column">
-                    <div class="column-title">Title</div>
-                    <div>Test 1.7</div>
-                    <div>Test 1.8</div>
-                    <div>Test 1.9</div>
+                    <div class="column-title">Title 3</div>
+                    <div>Test 3.1</div>
+                    <div>Test 3.2</div>
+                    <div>Test 3.3</div>
+                </div>
+                <div class="submenu-column">
+                    <div class="column-title">Title 4</div>
+                    <div>Test 4.1</div>
+                    <div>Test 4.2</div>
+                    <div>Test 4.3</div>
+                </div>
+                <div class="submenu-column">
+                    <div class="column-title">Title 5</div>
+                    <div>Test 5.1</div>
+                    <div>Test 5.2</div>
+                    <div>Test 5.3</div>
+                </div>
+                <div class="submenu-column">
+                    <div class="column-title">Title 6</div>
+                    <div>Test 6.1</div>
+                    <div>Test 6.2</div>
+                    <div>Test 6.3</div>
                 </div>
             </div>
+
             <div id="submenu-2" class="submenu">
                 <div class="submenu-column">
                     <div class="column-title">Title</div>
